# -the-silly-game-in-question-

./: Cargo.toml  README.md  UPDATE.md
.cargo/: config.toml
src/: installer.rs  main.rs
