[package]
name = "gui_test"
version = "0.2.0-windows"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"        # Main

[[bin]]
name = "installer"
path = "src/installer.rs"   # installer, DO NOT COMPILE UNTIL MAIN IS COMPILED.


[dependencies]
eframe = "0.30"
egui = "0.30"
rand = "0.8.5"
whoami = "1.2"