[package]
name = "gui_test"
version = "0.3.5"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"        # Main

[[bin]]
name = "installer"
path = "src/installer.rs"   # installer, DO NOT COMPILE UNTIL MAIN IS COMPILED.


[dependencies]
eframe = "0.30"
egui = "0.30"
rand = "0.8.5"
whoami = "1.2"
dirs = "3.0"
regex = "1.11.1"
dark-light = "1.1.1"
